--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ TERMS OF USE:
 - Commercial Use: Requires explicit license
 - Modification: Derivative works must maintain attribution
 
-For licensing inquiries: zeiendos@example.com
+For licensing inquiries: zeiendosinfinity@gmail.com
 -->
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8"/>
@@ -954,7 +954,7 @@ For licensing inquiries: zeiendos@example.com
                         This framework represents years of philosophical development and research.
                     </p>
                     <p class="text-xs text-gray-500 mt-2">
-                        For licensing, collaboration, or questions: zeiendos@example.com
+                        For licensing, collaboration, or questions: zeiendosinfinity@gmail.com
                     </p>
                 </div>
             </div>
@@ -1033,5 +1033,6 @@ if (window.innerWidth <= 1024) {
 }
 </script>
   
+
 
 </body></html>
